--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1 class="title-t5">2023 신년계획</h1>
     <p class="msg">반드시 완성한다!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center">소피등록</div>
+        <div class="bucket img1-t5 done center">소피등록</div>
         <div class="bucket img2-t5 center">HSK4</div>
         <div class="bucket img3-t5 center">한달한권</div>
         <div class="bucket img4-t5 center">운동하기</div>
